--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
         
     </head>
     <body>
+        <div class="header">
+            <h1>NORDLE</h1>
 
+        </div>
+        <hr>
         <div class="container">
-            <div class="header">
-                <h1>NORDLE</h1>
-                <hr>
-            </div>
+
             <div class="wordRow">
                 <div class="block"></div>
                 <div class="block"></div>
@@ -71,6 +72,8 @@
             </div>
 
             
+
+            <div class="btn">SHARE</div>
 
         </div>
         <!--[if lt IE 7]>
