--- a/index.html
+++ b/index.html
@@ -87,14 +87,17 @@
     ⬛⬛⬛⬛⬛</p>
 
 
-
+    <p id="score">Copied score to clipboard!</p>
 
         </div>
+
+
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
         
-        <script src="js/main.js" async defer></script>
+
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+        <script src="js/main.js" async defer></script>
     </body>
 </html>
